# ocpeasy-template-python-flask

./: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
