[tool.poetry]
name = "flask-poetry-app"
version = "0.1.0"
description = ""
authors = ["David Barrat <david_andre.barrat@novartis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
PyYAML = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
